@@ -293,3 +293,5 @@ Trunk (unreleased changes)
     PIG-232: let valid cache specifications through (acmurthy via olgan)
 
     PIG-237: validation of the output directory (pi_song via olgan)
+
+    PIG-236: Fix properties so that values specified via the command line (-D) are not ignored (pkamath via gates).
